--- a/src/containers/SearchPage/index.css
+++ b/src/containers/SearchPage/index.css
@@ -2,6 +2,12 @@
     padding: 20px 100px;
 }
 
+@media screen and (max-width: 768px) {
+    .search-page {
+        padding: 20px 20px;
+    }
+}
+
 .search-page-header {
     text-align: center;
 }
